# emerald

./: LICENSE  README.md  emerald.html  setup.cfg
emerald/: __init__.py
emerald/boa/: Trying Things.ipynb  __init__.py  __init__.py   _base.py  _classification.py  _regression.py  _tree.py
emerald/boa/.ipynb_checkpoints/: _regression-checkpoint.py
emerald/gems/: __init__.py  _data.py
emerald/optimal_models/: __init__.py  _classifiers.py  _regressors.py
emerald/optimal_models/.ipynb_checkpoints/: _regressors-checkpoint.py
gems/: __init__.py  sets.py
testing/: Testing.ipynb  Trying Things.ipynb
