[metadata]
name = emeraldml
version = 0.0.1
author = Yusuf Abdulla
author_email = yusuf.m.abdulla@gmail.com
description = Accelerating machine learning during the exploratory phase
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yu3ufff/emerald
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True